# Minimal-Libtorch

./: CMakeLists.txt  main.cpp
